# job-apply-suite

./: README.md  docker-compose.yml  pyproject.toml
apps/application-automator/: main.py
apps/application_automator/: main.py
apps/job-scraper/: main.py
apps/job_scraper/: main.py
apps/profile-analyzer/: main.py
apps/profile_analyzer/: main.py
apps/resume-tailor/: main.py
apps/resume_tailor/: main.py
